--- a/app/renderer/assets/locales/en-US/stake.json
+++ b/app/renderer/assets/locales/en-US/stake.json
@@ -18,6 +18,7 @@
   "stake_account_name": "Account Name",
   "stake_button_text": "Update Staked {{chainSymbol}}",
   "stake_confirming_header_one": "About to change delegation of: ",
+  "stake_label_jurisdictions": "Jurisdictions",
   "stake_cpu_amount": "CPU Amount",
   "stake_modal_main_title":"Update Staked Amounts",
   "stake_net_amount": "Bandwidth Amount",
