--- a/app/renderer/assets/locales/es-ES/beos_withdraw.json
+++ b/app/renderer/assets/locales/es-ES/beos_withdraw.json
@@ -5,6 +5,7 @@
   "withdraw_confirming_bitshares_network_fee": "Fee for withdrawal is the same as for the transfer in the Bitshares network.",
   "withdraw_confirming_body_quantity": "Please ensure the quantity for this withdrawal is valid.",
   "withdraw_confirming_title": "Review your Transaction",
+  "widthdraw_confirming_label_jurisdictions": "Jurisdictions",
   "withdraw_header_available": "available to withdraw.",
   "withdraw_label_from": "Origin Account",
   "withdraw_label_quantity": "Quantity",
