--- a/app/renderer/assets/locales/ja-JP/ram.json
+++ b/app/renderer/assets/locales/ja-JP/ram.json
@@ -7,6 +7,7 @@
   "ram_confirming_message_in_ram_for": "のRAMを次の価格で:",
   "ram_confirming_message_in_ram_left": "のRAM。",
   "ram_confirming_message_price_estimate_header": "見積もり",
+  "ram_confirming_label_jurisdictions": "Jurisdictions",
   "ram_confirming_message_price_estimate_subheader": "RAM価格はBancorアルゴリズムで常に変化しています。実際に支払う価格は若干異なる場合があります。",
   "ram_confirming_message_price_includes_chain_fee": "Please note, that this price includes a 0.5 percent system fee which is charged by the {{chainSymbol}} network.",
   "ram_confirming_message_will_have": "このトランザクションのあと、あなたは",
