--- a/app/renderer/assets/locales/zh-CN/tools.json
+++ b/app/renderer/assets/locales/zh-CN/tools.json
@@ -1,5 +1,6 @@
 {
   "tools_account_creation_header": "Confirm account creation",
+  "tools_form_create_account_label_jurisdictions": "Jurisdictions",
   "tools_airgrabs_account": "Account",
   "tools_airgrab_anything_missing": "Is an airdrop missing from this list? If so, let us know by dropping by the Greymass Wallet telegram channel: ",
   "tools_airgrabs_already_claimed": "Already Claimed",
