--- a/app/renderer/assets/locales/et-EE/producers.json
+++ b/app/renderer/assets/locales/et-EE/producers.json
@@ -6,6 +6,9 @@
   "block_producer_jurisdictions_code_table_header": "Code",
   "block_producer_jurisdictions_jurisdiction_table_header": "Jurisdiction",
   "block_producer_jurisdictions_description_table_header": "Description",
+  "block_producer_jurisdictions_state_error": "Error fetching jurisdictions.",
+  "block_producer_jurisdictions_state_loading": "Loading...",
+  "block_producer_jurisdictions_state_none": "No jurisdictions.",
   "block_producer_last_active": "Viimati Aktiivne",
   "block_producer_last_block": "Viimane Plokk",
   "block_producer_last_block_never": "Mitte kunagi",
