--- a/app/renderer/assets/locales/id-ID/actions.json
+++ b/app/renderer/assets/locales/id-ID/actions.json
@@ -9,6 +9,9 @@
   "actions_table_history_one": "Sent",
   "actions_table_history_two": "Passed",
   "actions_table_history_popup": "Click here to see jurisdiction history.",
+  "actions_table_history_jurisdictions_error": "Error fetching data.",
+  "actions_table_history_jurisdictions_loading": "Loading...",
+  "actions_table_history_jurisdictions_none": "No jurisdictions.",
   "actions_table_none": "Belum ada data yang tersimpan.",
   "actions_table_row_claim_text_one": "Diklaim ",
   "actions_table_row_transfer_from": "dari",
