--- a/app/renderer/assets/locales/ko-KR/actions.json
+++ b/app/renderer/assets/locales/ko-KR/actions.json
@@ -9,6 +9,9 @@
   "actions_table_history_one": "Sent",
   "actions_table_history_two": "Passed",
   "actions_table_history_popup": "Click here to see jurisdiction history.",
+  "actions_table_history_jurisdictions_error": "Error fetching data.",
+  "actions_table_history_jurisdictions_loading": "Loading...",
+  "actions_table_history_jurisdictions_none": "No jurisdictions.",
   "actions_table_none": "아직 작업의 데이터를 가져오지 않았습니다.",
   "actions_table_row_claim_text_one": "회수됨 ",
   "actions_table_row_transfer_from": "from",
