--- a/app/renderer/assets/locales/ko-KR/producers.json
+++ b/app/renderer/assets/locales/ko-KR/producers.json
@@ -6,6 +6,9 @@
   "block_producer_jurisdictions_code_table_header": "Code",
   "block_producer_jurisdictions_jurisdiction_table_header": "Jurisdiction",
   "block_producer_jurisdictions_description_table_header": "Description",
+  "block_producer_jurisdictions_state_error": "Error fetching jurisdictions.",
+  "block_producer_jurisdictions_state_loading": "Loading...",
+  "block_producer_jurisdictions_state_none": "No jurisdictions.",
   "block_producer_last_active": "최근 활성화",
   "block_producer_last_block": "최종 블록",
   "block_producer_last_block_never": "없음",
