--- a/app/renderer/assets/locales/es-ES/contract.json
+++ b/app/renderer/assets/locales/es-ES/contract.json
@@ -32,6 +32,6 @@
   "interface_tables_no_records": "No records found that match this contract and scope.",
   "interface_tables_placeholder": "Select a table...",
   "interface_tables_scope": "Table Scope (Account Name)",
-  "interface_tables_subheader": "Smact Contracts on the EOS network can contain tables containing public information.",
+  "interface_tables_subheader": "Smart Contracts on the EOS network can contain tables containing public information.",
   "tables": "Tables"
 }
