New interface for resources

--- a/app/renderer/assets/locales/en-US/ram.json
+++ b/app/renderer/assets/locales/en-US/ram.json
@@ -4,6 +4,7 @@
   "ram_buy_button_cta": "Buy RAM",
   "ram_buy_confirming_message_one": "You are about to buy",
   "ram_buy_modal_title": "Buy RAM",
+  "ram_buy_modal_title_r2": "Purchase RAM",
   "ram_confirming_message_in_ram_for": "in RAM for",
   "ram_confirming_message_in_ram_left": "in RAM.",
   "ram_confirming_message_price_estimate_header": "This is an estimate.",
