Added resource warnings

--- a/app/renderer/assets/locales/en-US/global.json
+++ b/app/renderer/assets/locales/en-US/global.json
@@ -144,6 +144,9 @@
   "global_modal_settings_customtoken_none_tracked": "No custom token accounts tracked.",
   "global_modal_settings_customtoken_notfound_header": "Token not found",
   "global_modal_settings_customtoken_notfound_subheader": "The details for the token entered could not be found.",
+  "global_resource_status_cpu_low": "Low CPU",
+  "global_resource_status_net_low": "Low NET",
+  "global_resource_status_ram_low": "Low RAM",
   "global_select_language": "Select Language",
   "global_settings_allow_dangerous_transactions": "Allow dangerous transactions",
   "global_settings_disable_dangerous_transactions": "Disable dangerous transactions",
