--- a/app/renderer/assets/locales/es-ES/common.json
+++ b/app/renderer/assets/locales/es-ES/common.json
@@ -1,7 +1,7 @@
 {
   "account_authority": "Account/Authority",
   "application_name": "eos-voter",
-  "application_version": "v0.7.12",
+  "application_version": "v1.0.0-rc1",
   "back": "Atrás",
   "block_height": "Altura del bloque",
   "blockchain": "Blockchain",
