--- a/app/renderer/assets/locales/ko-KR/common.json
+++ b/app/renderer/assets/locales/ko-KR/common.json
@@ -1,7 +1,7 @@
 {
   "account_authority": "Account/Authority",
   "application_name": "eos-voter",
-  "application_version": "v0.7.12",
+  "application_version": "v1.0.0-rc1",
   "back": "뒤로",
   "block_height": "블록 높이",
   "blockchain": "Blockchain",
