--- a/app/renderer/assets/locales/it-IT/common.json
+++ b/app/renderer/assets/locales/it-IT/common.json
@@ -1,7 +1,7 @@
 {
   "account_authority": "Account/Authority",
   "application_name": "eos-voter",
-  "application_version": "v0.7.11",
+  "application_version": "v1.0.0-rc1",
   "back": "Back",
   "block_height": "Numero di Blocco",
   "blockchain": "Blockchain",
