added jurisdiction texts to json, added conditions

--- a/app/renderer/assets/locales/et-EE/wallet.json
+++ b/app/renderer/assets/locales/et-EE/wallet.json
@@ -1,5 +1,15 @@
 {
   "edit": "Edit Wallet",
+  "jurisdictions_form_edit_button": "Edit",
+  "jurisdictions_form_fetch_failure": "Error fetching data",
+  "jurisdictions_form_header_select": "Select jurisdictions",
+  "jurisdictions_form_label_all": "All jurisdictions",
+  "jurisdictions_form_label_only": "Only active jurisdictions",
+  "jurisdictions_form_label_your": "Your jurisdictions",
+  "jurisdictions_form_loading": "Loading...",
+  "jurisdictions_form_no": "No jurisdictions.",
+  "jurisdictions_form_preposition_of": " of ",
+  "jurisdictions_form_placeholder_search": "Search...",
   "key_validation_account_not_found": "Määratud kontot ei leitud.",
   "key_validation_invalid_key": "Sisestatud privaatvõtit ei saanud lahendada avalikuks võtmeks. Palun veendu, et see on sisestatud õigesti.",
   "key_validation_no_permission": "Määratud privaatvõtmel ei ole õigusi tehingute teostamiseks määratud kontol",
