--- a/app/renderer/assets/locales/el-GR/wallet.json
+++ b/app/renderer/assets/locales/el-GR/wallet.json
@@ -1,5 +1,15 @@
 {
   "edit": "Edit Wallet",
+  "jurisdictions_form_edit_button": "Edit",
+  "jurisdictions_form_fetch_failure": "Error fetching data",
+  "jurisdictions_form_header_select": "Select jurisdictions",
+  "jurisdictions_form_label_all": "All jurisdictions",
+  "jurisdictions_form_label_only": "Only active jurisdictions",
+  "jurisdictions_form_label_your": "Your jurisdictions",
+  "jurisdictions_form_loading": "Loading...",
+  "jurisdictions_form_no": "No jurisdictions.",
+  "jurisdictions_form_preposition_of": " of ",
+  "jurisdictions_form_placeholder_search": "Search...",
   "key_validation_account_not_found": "The account specified could not be found.",
   "key_validation_invalid_key": "The private key entered could not be resolved to a public key. Please ensure it has been entered correctly.",
   "key_validation_no_permission": "The specified private key does not have permission to perform actions as the specified account",
