--- a/app/renderer/assets/locales/fr-FR/wallet.json
+++ b/app/renderer/assets/locales/fr-FR/wallet.json
@@ -1,5 +1,15 @@
 {
   "edit": "Edit Wallet",
+  "jurisdictions_form_edit_button": "Edit",
+  "jurisdictions_form_fetch_failure": "Error fetching data",
+  "jurisdictions_form_header_select": "Select jurisdictions",
+  "jurisdictions_form_label_all": "All jurisdictions",
+  "jurisdictions_form_label_only": "Only active jurisdictions",
+  "jurisdictions_form_label_your": "Your jurisdictions",
+  "jurisdictions_form_loading": "Loading...",
+  "jurisdictions_form_no": "No jurisdictions.",
+  "jurisdictions_form_preposition_of": " of ",
+  "jurisdictions_form_placeholder_search": "Search...",
   "key_validation_account_not_found": "Le compte spécifié n'a pu être trouvé.",
   "key_validation_invalid_key": "La clé privée n'a pas pu être résolue en une clé publique. S'il vous plaît assurez-vous qu'elle ait été entré correctement.",
   "key_validation_no_permission": "La clé privée spécifiée n'a pas l'autorisation d'effectuer des actions sur le compte spécifié.",
