--- a/app/renderer/assets/locales/it-IT/wallet.json
+++ b/app/renderer/assets/locales/it-IT/wallet.json
@@ -1,5 +1,15 @@
 {
   "edit": "Edit Wallet",
+  "jurisdictions_form_edit_button": "Edit",
+  "jurisdictions_form_fetch_failure": "Error fetching data",
+  "jurisdictions_form_header_select": "Select jurisdictions",
+  "jurisdictions_form_label_all": "All jurisdictions",
+  "jurisdictions_form_label_only": "Only active jurisdictions",
+  "jurisdictions_form_label_your": "Your jurisdictions",
+  "jurisdictions_form_loading": "Loading...",
+  "jurisdictions_form_no": "No jurisdictions.",
+  "jurisdictions_form_preposition_of": " of ",
+  "jurisdictions_form_placeholder_search": "Search...",
   "key_validation_account_not_found": "L'account specificato non è stato trovato.",
   "key_validation_invalid_key": "La chiave privata inserita non può essere risolta in una chiave pubblica. Si prega di assicurarsi che sia stata inserita correttamente.",
   "key_validation_no_permission": "La chiave privata specificata non dispone dell'autorizzazione per eseguire azioni per l'account specificato",
