--- a/app/renderer/assets/locales/ja-JP/wallet.json
+++ b/app/renderer/assets/locales/ja-JP/wallet.json
@@ -1,5 +1,15 @@
 {
   "edit": "Edit Wallet",
+  "jurisdictions_form_edit_button": "Edit",
+  "jurisdictions_form_fetch_failure": "Error fetching data",
+  "jurisdictions_form_header_select": "Select jurisdictions",
+  "jurisdictions_form_label_all": "All jurisdictions",
+  "jurisdictions_form_label_only": "Only active jurisdictions",
+  "jurisdictions_form_label_your": "Your jurisdictions",
+  "jurisdictions_form_loading": "Loading...",
+  "jurisdictions_form_no": "No jurisdictions.",
+  "jurisdictions_form_preposition_of": " of ",
+  "jurisdictions_form_placeholder_search": "Search...",
   "key_validation_account_not_found": "指定したアカウントが見つかりません。",
   "key_validation_invalid_key": "入力された秘密鍵で公開鍵を確認することができません。入力が正しいことを確認して下さい。",
   "key_validation_no_permission": "指定した秘密鍵には指定したアカウントの操作を実行するための権限がありません",
