--- a/app/renderer/assets/locales/ko-KR/wallet.json
+++ b/app/renderer/assets/locales/ko-KR/wallet.json
@@ -1,5 +1,15 @@
 {
   "edit": "Edit Wallet",
+  "jurisdictions_form_edit_button": "Edit",
+  "jurisdictions_form_fetch_failure": "Error fetching data",
+  "jurisdictions_form_header_select": "Select jurisdictions",
+  "jurisdictions_form_label_all": "All jurisdictions",
+  "jurisdictions_form_label_only": "Only active jurisdictions",
+  "jurisdictions_form_label_your": "Your jurisdictions",
+  "jurisdictions_form_loading": "Loading...",
+  "jurisdictions_form_no": "No jurisdictions.",
+  "jurisdictions_form_preposition_of": " of ",
+  "jurisdictions_form_placeholder_search": "Search...",
   "key_validation_account_not_found": "해당 계정을 찾을 수 없습니다.",
   "key_validation_invalid_key": "입력한 개인 키에 맞는 공개 키를 확인할 수 없습니다. 올바르게 입력되었는지 확인하십시오.",
   "key_validation_no_permission": "해당 개인 키에 지정된 계정으로 작업을 수행 할 수 있는 권한이 없습니다.",
