--- a/app/renderer/assets/locales/ru-RU/wallet.json
+++ b/app/renderer/assets/locales/ru-RU/wallet.json
@@ -1,5 +1,15 @@
 {
   "edit": "Edit Wallet",
+  "jurisdictions_form_edit_button": "Edit",
+  "jurisdictions_form_fetch_failure": "Error fetching data",
+  "jurisdictions_form_header_select": "Select jurisdictions",
+  "jurisdictions_form_label_all": "All jurisdictions",
+  "jurisdictions_form_label_only": "Only active jurisdictions",
+  "jurisdictions_form_label_your": "Your jurisdictions",
+  "jurisdictions_form_loading": "Loading...",
+  "jurisdictions_form_no": "No jurisdictions.",
+  "jurisdictions_form_preposition_of": " of ",
+  "jurisdictions_form_placeholder_search": "Search...",
   "key_validation_account_not_found": "Не удалось найти указанную учётую запись.",
   "key_validation_invalid_key": "Введенный закрытый ключ не может быть преобразован в открытый ключ. Убедитесь, что он был введен правильно.",
   "key_validation_no_permission": "Указанный закрытый ключ не имеет разрешения на выполнение действий в качестве указанной учётной записи",
