--- a/app/renderer/assets/locales/zh-CN/wallet.json
+++ b/app/renderer/assets/locales/zh-CN/wallet.json
@@ -1,5 +1,15 @@
 {
   "edit": "Edit Wallet",
+  "jurisdictions_form_edit_button": "Edit",
+  "jurisdictions_form_fetch_failure": "Error fetching data",
+  "jurisdictions_form_header_select": "Select jurisdictions",
+  "jurisdictions_form_label_all": "All jurisdictions",
+  "jurisdictions_form_label_only": "Only active jurisdictions",
+  "jurisdictions_form_label_your": "Your jurisdictions",
+  "jurisdictions_form_loading": "Loading...",
+  "jurisdictions_form_no": "No jurisdictions.",
+  "jurisdictions_form_preposition_of": " of ",
+  "jurisdictions_form_placeholder_search": "Search...",
   "key_validation_account_not_found": "找不到指定的帐户.",
   "key_validation_invalid_key": "输入的私钥无法解析为公钥,请确保输入正确.",
   "key_validation_no_permission": "指定的私钥没有权限执行指定账户的操作",
