changed desriptions depending on blockchain

--- a/app/renderer/assets/locales/et-EE/producers.json
+++ b/app/renderer/assets/locales/et-EE/producers.json
@@ -20,8 +20,10 @@
   "block_producer_votes_none": "Mitte ükski",
   "producer_info_data": "Järgnev on toores JSON mille plokitootja esitas plokiahelale.",
   "producer_info_description": "Järgnev teave oli esitatud selle plokitootja poolt targa lepingu `producerjson` failis, avalikult esitamiseks kõikides EOS rakendustes, mis seda toetavad. Lisateavet käesoleva protokolli kohta - ",
+  "producer_info_description_beos": "Järgnev teave oli esitatud selle plokitootja poolt targa lepingu `producerjson` failis, avalikult esitamiseks kõikides BEOS rakendustes, mis seda toetavad. Lisateavet käesoleva protokolli kohta - ",
   "producer_info_description_more": "loe tutvustavat postitust",
   "producer_json_unavailable_content": "See plokitootja ei ole veel avaldanud oma kandideerimisteavet \"producerjson\" tarka lepingusse EOS plokiahelas.",
+  "producer_json_unavailable_content_beos": "See plokitootja ei ole veel avaldanud oma kandideerimisteavet \"producerjson\" tarka lepingusse BEOS plokiahelas.",
   "producer_json_unavailable_header": "Teave pole saadaval",
   "producer_none_loaded": "Tootja andmeid pole laetud...",
   "producer_none_match": "Ükski tootja ei vasta otsingule.",
