--- a/app/renderer/assets/locales/ja-JP/producers.json
+++ b/app/renderer/assets/locales/ja-JP/producers.json
@@ -20,8 +20,10 @@
   "block_producer_votes_none": "なし",
   "producer_info_data": "以下は、ブロックプロデューサによってブロックチェーンに提出された生のJSONです。",
   "producer_info_description": "以下の情報はこのブロックプロデューサが「producerjson」スマートコントラクトに提出したものであり、サポートするすべてのEOSアプリケーションで公開されています。このプロトコルの詳細は - ",
+  "producer_info_description_beos": "以下の情報はこのブロックプロデューサが「producerjson」スマートコントラクトに提出したものであり、サポートするすべてのBEOSアプリケーションで公開されています。このプロトコルの詳細は - ",
   "producer_info_description_more": "紹介記事を読む",
   "producer_json_unavailable_content": "このブロックプロデューサはEOSブロックチェーン上の「producerjson」スマートコントラクトに立候補情報をまだ公開していません。",
+  "producer_json_unavailable_content_beos": "このブロックプロデューサはBEOSブロックチェーン上の「producerjson」スマートコントラクトに立候補情報をまだ公開していません。",
   "producer_json_unavailable_header": "情報が利用できません",
   "producer_none_loaded": "プロデューサデータがありません...",
   "producer_none_match": "検索条件に一致するプロデューサがありません。",
