--- a/app/renderer/assets/locales/ko-KR/producers.json
+++ b/app/renderer/assets/locales/ko-KR/producers.json
@@ -20,8 +20,10 @@
   "block_producer_votes_none": "없음",
   "producer_info_data": "다음은 블록 생성자가 블록 체인에 제출 한 원본 JSON입니다.",
   "producer_info_description": "이 블록 생산자가 다음 정보를 'producerjson` 스마트 계약에 제출하여이를 지원하는 모든 EOS 애플리케이션에서 공개적으로 표시했습니다. 이 프로토콜에 대한 자세한 내용은 - ",
+  "producer_info_description_beos": "이 블록 생산자가 다음 정보를 'producerjson` 스마트 계약에 제출하여이를 지원하는 모든 BEOS 애플리케이션에서 공개적으로 표시했습니다. 이 프로토콜에 대한 자세한 내용은 - ",
   "producer_info_description_more": "소개 게시물 읽기",
   "producer_json_unavailable_content": "이 블록 생산자는 EOS 블록 체인의 'producerjson` 스마트 계약에 정보를 게시하지 않았습니다.",
+  "producer_json_unavailable_content_beos": "이 블록 생산자는 BEOS 블록 체인의 'producerjson` 스마트 계약에 정보를 게시하지 않았습니다.",
   "producer_json_unavailable_header": "정보 없음",
   "producer_none_loaded": "프로듀서 정보를 가져오지 못했습니다",
   "producer_none_match": "일치하는 프로듀서 없습니다.",
