--- a/app/renderer/assets/locales/es-ES/producers.json
+++ b/app/renderer/assets/locales/es-ES/producers.json
@@ -20,8 +20,10 @@
   "block_producer_votes_none": "Ninguno",
   "producer_info_data": "The following is the raw JSON as submitted by the block producer to the blockchain.",
   "producer_info_description": "The following information was submitted by this block producer to the `producerjson` smart contract, for public display in all EOS applications supporting it. For more information on this protocol - ",
+  "producer_info_description_beos": "The following information was submitted by this block producer to the `producerjson` smart contract, for public display in all BEOS applications supporting it. For more information on this protocol - ",
   "producer_info_description_more": "read the introduction post",
   "producer_json_unavailable_content": "This block producer has not yet published their candicacy information to the `producerjson` smart contract on the EOS blockchain.",
+  "producer_json_unavailable_content_beos": "This block producer has not yet published their candicacy information to the `producerjson` smart contract on the BEOS blockchain.",
   "producer_json_unavailable_header": "Information Unavailable",
   "producer_none_loaded": "No hay datos de productores cargados...",
   "producer_none_match": "Ningún productor coincide con la consulta de búsqueda.",
