replacing eos-voter with anchor

--- a/app/renderer/assets/locales/en-US/about.json
+++ b/app/renderer/assets/locales/en-US/about.json
@@ -1,12 +1,12 @@
 {
   "about_opensource_title": "This application is open source",
   "about_opensource_message": " We welcome contributions to this application. If you are interested, please join us on Github at",
-  "about_opensource_link": "https://github.com/greymass/eos-voter",
-  "about_message_1": "eos-voter is a standalone desktop application that connects directly to the EOS blockchain through the API endpoint of your choice.",
+  "about_opensource_link": "https://github.com/greymass/anchor",
+  "about_message_1": "Anchor is a standalone desktop application that connects directly to the EOS blockchain through the API endpoint of your choice.",
   "about_message_2": "Your keys never leave the application itself and are only ever stored encrypted, providing the highest level of security a hot wallet can offer.",
   "about_more": "Please visit us at https://greymass.com if you would like to learn more.",
   "about_issues": "If you have encounter problems with the application itself, please file an issue on github below:",
-  "about_issues_link": "https://github.com/greymass/eos-voter/issues",
+  "about_issues_link": "https://github.com/greymass/anchor/issues",
   "about_greymass_message_1": "This application is an initiative spearheaded by Greymass.",
   "about_greymass_message_2": "If you would like to learn more about our team and the other projects we have planned for EOS, we invite you to visit us at",
   "about_license_type": "The MIT License (MIT)",
