--- a/app/renderer/assets/locales/en-US/tools.json
+++ b/app/renderer/assets/locales/en-US/tools.json
@@ -35,7 +35,7 @@
   "tools_bidname_search_recent_bids": "Search for Recent Bids",
   "tools_blockchains_beos_crosschaintransfer_accept_body_1": "These crosschain transfers are provided by a 3rd party gateway which allow you to exchange tokens across the EOS and BEOS blockchains.",
   "tools_blockchains_beos_crosschaintransfer_accept_body_2": "In order to accomplish this within this app, a set of 3rd party APIs must be used, ones which you cannot control or configure. By agreeing and continuing, these APIs will be used within this section of the application.",
-  "tools_blockchains_beos_crosschaintransfer_accept_body_3": "The creators of eos-voter are in no way responsible for this service, it's data usage policies, and transfers made while using this feature.",
+  "tools_blockchains_beos_crosschaintransfer_accept_body_3": "The creators of Anchor are in no way responsible for this service, it's data usage policies, and transfers made while using this feature.",
   "tools_blockchains_beos_crosschaintransfer_accept_header": "This feature utilizes 3rd party API services",
   "tools_blockchains_beos_crosschaintransfer_accept_subheader": "Before proceeding, please take a moment to understand what this means.",
   "tools_blockchains_beos_crosschaintransfer_explain_content": "This utility allows you to deposit/withdraw EOSIO based tokens from a 3rd party gateway. Currently exchanges can be made between EOS (EOS Mainnet) and BEOS (BEOS Blockchain), allowing the transition back and forth between EOS and BEOS. More exchange types will be added as BEOS functionality expands and those options will be made available here.",
@@ -319,7 +319,7 @@
   "tools_proposals_sort_by_vote": "Show only proposals voted on",
   "tools_proposals_status_filter_active": "Only show Active Proposals",
   "tools_proposals_status_filter_expired": "Only show Expired Proposals",
-  "tools_proposals_subheader": "This is an early release of the interface in eos-voter to interact with the LIVE EOS Referendum System. Expect a major revamp of this tool in the near future.",
+  "tools_proposals_subheader": "This is an early release of the interface in Anchor to interact with the LIVE EOS Referendum System. Expect a major revamp of this tool in the near future.",
   "tools_proposals_title": "Title",
   "tools_proposals_voted_filter_accepted": "Only Show Proposals Accepted",
   "tools_proposals_voted_filter_all": "Don't filter proposals by vote",
