--- a/app/renderer/assets/locales/id-ID/about.json
+++ b/app/renderer/assets/locales/id-ID/about.json
@@ -1,12 +1,12 @@
 {
   "about_opensource_title": "Aplikasi ini adalah bentuk open source",
   "about_opensource_message": " Kami mempersilahkan berkontribusi untuk aplikasi ini. Jika Anda tertarik, bergabunglah dengan Github kami di",
-  "about_opensource_link": "https://github.com/greymass/eos-voter",
+  "about_opensource_link": "https://github.com/greymass/anchor",
   "about_message_1": "eos-voter adalah sebuah aplikasi desktop mandiri yang terhubung langsung dengan blockchain EOS melalui endpoint API pilihan Anda.",
   "about_message_2": "Jangan pernah biarkan kata kunci Anda tertinggal pada aplikasi ini dan hanya disimpan yang dienkripsi, menyediakan tingkat keamanan yang paling tinggi dari sebuah walet yang bisa ditawarkan.",
   "about_more": "Kunjungi kami di https://greymass.com jika Anda ingin mempelajari lebih jauh lagi.",
   "about_issues": "Jika Anda punya masalah dengan Aplikasi ini, sampaikan saja pada github di bawah ini:",
-  "about_issues_link": "https://github.com/greymass/eos-voter/issues",
+  "about_issues_link": "https://github.com/greymass/anchor/issues",
   "about_greymass_message_1": "Aplikasi ini adalah inisiatif yang disediakan oleh Greymass.",
   "about_greymass_message_2": "Jika Anda ingin mengetahui lebih banyak tentang tim kami dan berbagai proyek lainnya yang sudah kami rencanakan untuk EOS, kami undang Anda mengunjungi kami di",
   "about_license_type": "Lisensi MIT (MIT)",
