--- a/app/renderer/assets/locales/ru-RU/about.json
+++ b/app/renderer/assets/locales/ru-RU/about.json
@@ -1,12 +1,12 @@
 {
   "about_opensource_title": "Это приложение с открытым исходным кодом",
   "about_opensource_message": "Мы приветствуем ваше участие в развитии этого приложения. Если вы заинтересованы, присоединяйтесь к нам на Github по адресу",
-  "about_opensource_link": "https://github.com/greymass/eos-voter",
+  "about_opensource_link": "https://github.com/greymass/anchor",
   "about_message_1": "eos-voter - автономное настольное приложение, которое напрямую подключается к блокцепи EOS через конечную точку API по вашему выбору.",
   "about_message_2": "Ваши ключи никогда не покидают приложение и хранятся только в зашифрованном виде, обеспечивая высокий уровень безопасности.",
   "about_more": "Пожалуйста, посетите https://greymass.com, если хотите больше узнать о нас.",
   "about_issues": "Если у вас возникли проблемы с самим приложением, напишите нам о проблеме на github по адресу:",
-  "about_issues_link": "https://github.com/greymass/eos-voter/issues",
+  "about_issues_link": "https://github.com/greymass/anchor/issues",
   "about_greymass_message_1": "Это приложение является инициативой, возглавляемой Greymass.",
   "about_greymass_message_2": "Если вы хотите узнать больше о нашей команде и других проектах, которые мы запланировали для EOS, мы приглашаем вас посетить нас по адресу:",
   "about_license_type": "Лицензия MIT (MIT)",
