--- a/app/renderer/assets/locales/es-ES/about.json
+++ b/app/renderer/assets/locales/es-ES/about.json
@@ -1,12 +1,12 @@
 {
   "about_opensource_title": "Esta aplicación es de código abierto",
   "about_opensource_message": " Acogemos con satisfacción las contribuciones a esta aplicación. Si usted está interesado, por favor únase a nosotros en Github en",
-  "about_opensource_link": "https://github.com/greymass/eos-voter",
+  "about_opensource_link": "https://github.com/greymass/anchor",
   "about_message_1": "eos-voter es una aplicación de escritorio independiente que se conecta directamente a la blockchain de EOS a través del endpoint API de su elección.",
   "about_message_2": "Sus llaves nunca dejan la aplicación en sí y sólo se almacenan encriptados, proporcionando el máximo nivel de seguridad que un monedero caliente puede ofrecer.",
   "about_more": "Por favor visítenos en https://greymass.com si desea saber más.",
   "about_issues": "Si encuentras problemas con la propia aplicación, por favor preséntalos en github a continuación:",
-  "about_issues_link": "https://github.com/greymass/eos-voter/issues",
+  "about_issues_link": "https://github.com/greymass/anchor/issues",
   "about_greymass_message_1": "Esta aplicación es una iniciativa liderada por Greymass.",
   "about_greymass_message_2": "Si desea aprender más sobre nuestro equipo y los otros proyectos que planeamos para EOS, lo invitamos a visitarnos en",
   "about_license_type": "The MIT License (MIT)",
