--- a/app/renderer/assets/locales/ko-KR/about.json
+++ b/app/renderer/assets/locales/ko-KR/about.json
@@ -1,12 +1,12 @@
 {
   "about_opensource_title": "이 프로그램은 오픈소스입니다.",
   "about_opensource_message": "우리는 이 프로그램에 대한 협력과 기부를 환영합니다.",
-  "about_opensource_link": "https://github.com/greymass/eos-voter",
+  "about_opensource_link": "https://github.com/greymass/anchor",
   "about_message_1": "eos voter는 선택한 API 엔드포인트를 통해 EOS 블록체인에 직접 연결되는 독립형 데스크톱 프로그램입니다.",
   "about_message_2": "키들은 본 프로그램에 암호화된 상태로 저장되므로, 라이트 지갑에서 제공할 수 있는 최고 수준의 보안을 제공합니다.",
   "about_more": "자세한 내용을 보시려면 https://greymass.com을 방문하십시오.",
   "about_issues": "프로그램 자체에 문제가 발생하면 아래 github에서 문제를 보고 하십시오.",
-  "about_issues_link": "https://github.com/greymass/eos-voter/issues",
+  "about_issues_link": "https://github.com/greymass/anchor/issues",
   "about_greymass_message_1": "이 프로그램은 Greymass에서 주관하는 프로젝트입니다.",
   "about_greymass_message_2": "우리 팀과 EOS 관련된 우리의 프로젝트들에 대해 더 자세히 알고 싶으시다면 다음 사이트를 방문하세요.",
   "about_license_type": "MIT 라이센스 (MIT)",
